{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 21,
  "lineage": "fbfa1a53-5e40-a647-2c3e-27fab549fab0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elasticsearch-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c8ead5922bf8082",
            "arn": "arn:aws:ec2:us-east-1:343102886243:instance/i-0599581d6e54c1013",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "qa_elasticsearch_ec2_profile",
            "id": "i-0599581d6e54c1013",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "chiran",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02499ee108a5f3f0c",
            "private_dns": "ip-10-1-1-126.ec2.internal",
            "private_ip": "10.1.1.126",
            "public_ip": "18.233.111.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0e9579738d2d76944",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ff9b71bc7395fff",
            "tags": {
              "Name": "Elasticsearch ec2",
              "version": "1.0.0"
            },
            "tags_all": {
              "Name": "Elasticsearch ec2",
              "version": "1.0.0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d0870f357e1994e1"
            ]
          },
          "dependencies": [
            "aws_elasticsearch_domain.es_cluster",
            "aws_iam_instance_profile.elasticsearch_ec2_profile",
            "aws_iam_role.elasticsearch_ec2_role",
            "aws_security_group.sg_allow_ssh_elasticsearch",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.devops_vpc",
            "data.aws_ami.ec2",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "data.template_file.es_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343102886243:internet-gateway/igw-0f820df0d83b75072",
            "id": "igw-0f820df0d83b75072",
            "owner_id": "343102886243",
            "tags": {
              "Name": "Elasticsearch igw",
              "version": "1.0.0"
            },
            "tags_all": {
              "Name": "Elasticsearch igw",
              "version": "1.0.0"
            },
            "vpc_id": "vpc-044e6fc4a6934f164"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343102886243:route-table/rtb-0183aa967e3f83297",
            "id": "rtb-0183aa967e3f83297",
            "owner_id": "343102886243",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f820df0d83b75072",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Elasticsearch routetable",
              "version": "1.0.0"
            },
            "tags_all": {
              "Name": "Elasticsearch routetable",
              "version": "1.0.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-044e6fc4a6934f164"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0386b464ead8c4653",
            "route_table_id": "rtb-0183aa967e3f83297",
            "subnet_id": "subnet-08ff9b71bc7395fff"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-routing",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_elasticsearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343102886243:security-group/sg-0d0870f357e1994e1",
            "description": "Allow SSH and elasticsearch inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0870f357e1994e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5600
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "qa_allow_ssh_elasticsearch",
            "name_prefix": "",
            "owner_id": "343102886243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Devops 3TierApp",
              "version": "1.0.0"
            },
            "tags_all": {
              "Name": "Devops 3TierApp",
              "version": "1.0.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-044e6fc4a6934f164"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343102886243:subnet/subnet-08ff9b71bc7395fff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ff9b71bc7395fff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343102886243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Elasticsearch pub subnet",
              "version": "1.0.0"
            },
            "tags_all": {
              "Name": "Elasticsearch pub subnet",
              "version": "1.0.0"
            },
            "vpc_id": "vpc-044e6fc4a6934f164"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343102886243:vpc/vpc-044e6fc4a6934f164",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f40712d01764cbc3",
            "default_route_table_id": "rtb-076a3fc6d9b4fab32",
            "default_security_group_id": "sg-00bbe8b9082cf9a10",
            "dhcp_options_id": "dopt-061d60acd41ee5295",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-044e6fc4a6934f164",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076a3fc6d9b4fab32",
            "owner_id": "343102886243",
            "tags": {
              "Name": "Elasticsearch",
              "version": "1.0.0"
            },
            "tags_all": {
              "Name": "Elasticsearch",
              "version": "1.0.0"
            }
          }
        }
      ]
    }
  ]
}